test/error/end_label_module_wrong.sv
// pattern: element "yes" has mismatched end label "no"
module yes;
endmodule : no
